fix: replace toList with collect